<resources>
    <string name="app_name">UME PAL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="checkout">Checkout</string>
    <string name="Myaccount"><b><t></t>My Account</b></string>
    <string name="editprofile"><b><t></t>Edit Profile</b></string>
    <string name="productdetails"><b><t></t>Product Details</b></string>
    <string name="user_name">eddy551</string>
    <string name="email_id">eddyok9@gmail.com</string>
    <string name="my_buying">My Buying</string>
    <string name="home">Home</string>
    <string name="action_bar_heading">Explore</string>
    <string name="scrollbar_fade_duration">100</string>
    <string name="app_title">1000Days</string>
    <string name="baby_title">Baby</string>
    <string name="myAccount_title">My Account</string>
    <string name="all">ALL</string>
    <string name="heading_confirm">Details</string>
    <string name="clear_all">Clear All</string>
    <string name="Medium_text">Medium Text</string>
    <string name="price">$34.90</string>
    <string name="login_email">Email</string>
    <string name="login_fname">First Name</string>
    <string name="login_lname">Last Name</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="login_to">Login to</string>
    <string name="login_with_fb">Login With Facebook</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_signup_for">Sign Up for</string>
    <string name="forgot_pswd_cancel_text">cancel and back to login page</string>
    <string name="forgot_pswd_reset">Reset Password</string>
    <string name="forgot_pswd">Forgot Password?</string>
    <string name="forgot_pswd_token">TOKEN</string>
    <string name="forgot_reset_pswd">Reset Password</string>
    <string name="title">Explore</string>
    <string name="APP_ID">842207449165732</string>
    <string name="promotion">Promotion</string>
    <string name="Categorynew">New</string>
    <string name="type">Types</string>
    <string name="baby">Baby</string>
    <string name="nointernet">No Internet</string>
    <string name="product_description1">In Annie Tiang TCM, Prof Joseph Yap and his team utilize techniques and treatments passed down through many generations and traditions. These traditions date back to nearly three hundred years ago</string>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="Pay_Now">Pa</string>
    <string name="title_activity_loginactivity">Loginactivity</string>
    <string name="title_activity_forgotpassword">Forgotpassword</string>
    <string name="title_activity_signupactivity">Signupactivity</string>
    <string name="title_activity_loginwithfacebook">Loginwithfacebook</string>
    <string name="title_activity_logoutpopup">Logoutpopup</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="title_activity_edit_profile">Edit_profile</string>
    <string name="title_activity_edit_profile_pic">Edit_profile_pic</string>
    <string name="facebook_app_id">993399600701319</string>
    <string name="no_notification"> There are no notifications to display!! </string>
    <string name="notification">Notifications</string>
    <string name="available_at_store">Available at store pickup</string>
    <string-array name="quantity_values" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="new_nav_drawer_items">
        <item >\tBrowse</item>
        <item >\tShopping Cart</item>
        <item >\tReal Time Payment</item>
        <item >\tMy Account</item>
        <item >\t Wallet</item>
        <item >\tNew Referee</item>
        <item >\tNotification</item>
        <item >\tOrder History</item>
        <item >\tInvite Friends</item>
        <item >\tCustomer Support</item>
        <item >\t\t\tContact Us</item>
        <item >\t\t\tGeneral terms</item>
        <item >\tLogOut</item>
        <item >\tLogIn</item>

    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="currency">SGD </string>
    <string name="dollar">$</string>
    <string name="full_name">Full Name *</string>
    <string name="street_address">Street Address *</string>
    <string name="unit">Apt/Suite/Unit(optional)</string>
    <string name="state">State(optional)</string>
    <string name="country">Country *</string>
    <string name="city">City *</string>
    <string name="postal_code">Zip/Postal Code *</string>
    <string name="phone">Phone *</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="ship_to">Ship to: </string>
    <string name="info">* indicates a field is required</string>
    <string name="singapore">Singapore</string>
    <string name="store_address">Xminds Info \nAyurveda College Jn \nTrivandrum</string>
    <string name="uploadICpic">Pleace Upload \nYour IC photo</string>
    <string name="top_up">TOP UP</string>
    <string name="upgrade_membership">UPGRADE\nMEMBERSHIP</string>
    <string name="total_available_balance">Total Available Balance</string>
    <string name="total_lebadger_balance">Total LeBadger Balance</string>
    <string name="rebates">Rebates</string>
    <string name="commissions">Commissions</string>
    <string name="wallet_price">$ 15.40</string>
    <string name="rebate_statement">Rebate Statement</string>
    <string name="month">March 2016</string>
    <string name="rebate_gotten">Rebate gotten via own spending</string>
    <string name="commissions_statement">Commisions Statement</string>
     <string name="return_policy">
   <![CDATA[
    <html><body><p style="text-align:justify">
    You may return all products within 7 calendar days of delivery (Please
safe keep your delivery receipt) if your product received falls under
one of conditions below:-</p>

<p>1. Product received is not product listed on lufluf by merchant</p>
<p>2. Product is not authentic and considered to be counterfeit products</p>
<p>3. Damage on the product that you received which due to manufacture
defect or damage incurs by delivery.</p>

<p>You can initiate your return/refund process by simply tap on contact us
and email to us via email address indicated. Please attach with clear
photo/s as possible and we aim to process all requests within 72 hours
upon receiving. Refunds are issued back to the original form of payment
used to purchase the order.</p>

<p>In the event, any form of voucher/gift card is applied to an order, and
that if order is refunded for any reason, any voucher/gift cards used in
that order will not be refunded.</p>

<p>At this time, Banyan Tree Ventures cannot refund, reimburse, cover, or
otherwise be responsible for any fees not paid to Banyan Tree Ventures.
This includes any customs taxes or VAT, as well as any return shipping
costs you may incur in the refund process and potential payment handling
fees.
   </p></body></html>]]>
   </string>
</resources>